--- a/portal/templates/questions.html
+++ b/portal/templates/questions.html
@@ -25,12 +25,9 @@
                                 <input type="radio" name="biopsy" data-value="false" autocomplete="off"> No
                             </label>
                         </div>
-                        <div style="display: none">
-
-                        </div>
                     </div>
 
-                    <div data-topic="pca_diag" style="display: none">
+                    <div data-topic="pca_diag" class="hide-initial">
                         <br /><br />
                         <h4>Have you been diagnosed with prostate cancer?</h4>
                         <div class="btn-group" data-toggle="buttons">
@@ -43,7 +40,7 @@
                         </div>
                     </div>
 
-                    <div data-topic="tx" style="display: none;">
+                    <div data-topic="tx" class="hide-initial">
                         <br /><br />
                         <h4>Have you begun prostate cancer treatment?</h4>
                         <div class="btn-group" data-toggle="buttons">
@@ -59,7 +56,7 @@
                 </div>
 
                 <br /><br /><br />
-                <div style="display: none;">
+                <div class="hide-initial" id="continueBtn">
                     <a class="btn btn-tnth-primary" href="/home">Continue <i class="fa fa-chevron-right"></i></a>
                 </div>
 
@@ -103,8 +100,13 @@ $(document).ready(function(){
             // If true, then display next question
             if (theVal == "true") {
                 $("div[data-topic='"+toCall+"']").next().fadeIn("slow");
+                // If last question, then always display continue
+                if (toCall == "tx") {
+                    $("#continueBtn").fadeIn();
+                }
             } else {
                 $("div[data-topic='"+toCall+"']").next().hide();
+                $("#continueBtn").fadeIn();
                 // TODO - clear any saved value here?
             }
         }).fail(function() {
