--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -91,6 +91,54 @@
             </div>
         </div>
 
+        <div class="col-xs-12" id="otherInterventions">
+            <div class="well">
+                <h2 style="margin-top: 0">Other Interventions</h2>
+                <p><small>For demo use</small></p>
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1">
+
+                        <div class="hide-initial" id="otherP3p">
+                            <h3>Decision Support</h3>
+                            <div class="int-sub">Which option is best for me?</div>
+                            <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
+                            <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
+                        </div>
+
+                        <div class="hide-initial" id="otherSm">
+                            <h3>Self Management</h3>
+                            <div class="int-sub">How do I cope with my symptoms?</div>
+                            <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
+                            <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
+                        </div>
+
+                        <h3>Care Plan</h3>
+                        <div class="int-sub">How do I move forward after treatment?</div>
+                        <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
+                        <a href="{{ config['CARE_PLAN_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Care Plan <i class="fa fa-chevron-right"></i></a>
+
+                        <h3>Community of Wellness</h3>
+                        <div class="int-sub">How can I be healthy?</div>
+                        <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
+                        <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Community of Wellness <i class="fa fa-chevron-right"></i></button></p>
+
+                        <h3>Sexual Recovery</h3>
+                        <div class="int-sub">What about sex?</div>
+                        <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
+                        <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Sexual Recovery <i class="fa fa-chevron-right"></i></button></p>
+
+                        <h3>Social Support Network</h3>
+                        <div class="int-sub">Who can I talk with?</div>
+                        <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
+                        <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Social Support Network <i class="fa fa-chevron-right"></i></button></p>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -119,9 +167,11 @@
                     // If yes to more than 2, then display self management
                     if (ansYes > 2) {
                         $("#sm").show();
+                        $("#otherP3p").show();
                     } else if (ansYes > 0) {
                         // If yes is 1 or 2, then display p3p
                         $("#p3p").show();
+                        $("#otherSm").show();
                     } else {
                         if (ansNo == 0) {
                             // If all answers are unknown then display the old-school allContent
