Show Decision Support and Self Mgmt on portal (under additional interventions) if patient answers No to all three questions.

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -176,6 +176,9 @@
                         if (ansNo == 0) {
                             // If all answers are unknown then display the old-school allContent
                             $("#allContent").show();
+                        } else if (ansNo == 3) {
+                            $("#otherP3p").show();
+                            $("#otherSm").show();
                         }
                     }
                     $("p[data-ans-count='"+ansYes+"']").show();
