--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -7,27 +7,34 @@
                     <h3>User Administration</h3>
 
                     <p id="profileIntro">Select any user to view details or make changes.</p>
-                    {% for user in users %}
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-xs-2">
-                                    <a href="{{ url_for('.profile', user_id=user.id) }}">{{ user.username }}</a>
-                                </div>
-                                <div class="col-xs-2">
-                                    <p id="name">({{ user.last_name if user.last_name }}, {{ user.first_name if user.first_name }})</p>
-                                </div>
-                                <div class="col-xs-3">
-                                    <p id="email">&lt;{{ user.email if user.email }}&gt;</p>
-                                </div>
-                                <div class="col-xs-1"><b>Roles:</b></div>
-                                <div class="col-xs-3">
-                                    <p id="roles">{{ user.rolelist }} </p>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
+
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover table-condensed">
+                            <thead>
+                                <tr>
+                                    <th>Username</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Email</th>
+                                    <th>Roles</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for user in users %}
+                                <tr>
+                                    <td><a href="{{ url_for('.profile', user_id=user.id) }}">{{ user.username }}</a></td>
+                                    <td>{{ user.first_name if user.first_name }}</td>
+                                    <td>{{ user.last_name if user.last_name }}</td>
+                                    <td>{{ user.email if user.email }}</td>
+                                    <td>{{ user.rolelist }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>        
+        </div>
+
     </div>
 {% endblock %}
