--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -1,5 +1,22 @@
 <div class="tnth-nav-wrapper">
 
+<script type="text/javascript">
+//fixme needs a better location/mechanism - mark47?
+  var _paq = _paq || [];
+
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//piwik.cirg.washington.edu/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', 2]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<noscript><p><img src="//piwik.cirg.washington.edu/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
+
+
     <div class="container hidden-xs tnth-nav-main">
         <div id="tnthLogo">
             <a href="{{PORTAL}}"><img src="{{PORTAL}}{{ url_for('static', filename='img/logo_truenth_alt.png') }}" /></a>
@@ -8,6 +25,12 @@
         <div id="tnthTopLinks">
             <div class="btn-group nav-userinfo">
             {% if username %}
+
+                <script type="text/javascript">
+                //fixme needs a better location/mechanism - mark47?
+                _paq.push(["setCustomDimension", 1, "user_id", "{{ user.id }}"]);
+                </script>
+
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     Welcome, {{ username }}
                     <img src="{{movember_profile}}" />
