Fixed bug in piwik user.id tracking

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -28,7 +28,7 @@
 
                 <script type="text/javascript">
                 //fixme needs a better location/mechanism - mark47?
-                _paq.push(["setCustomDimension", 1, "user_id", "{{ user.id }}"]);
+                _paq.push(["setCustomDimension", 1, "{{ user.id }}"]);
                 </script>
 
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
