--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -142,7 +142,7 @@
 
                     <hr />
 
-                    {% if user.has_role('admin') %}
+                    {% if current_user.has_role('admin') %}
                     <h3>User Roles for {{ user.username }}</h3>
                     <div id="userRoles">
                         <div class="form-group">
